--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -4,15 +4,15 @@ on:
   #
   # Triggers this workflow on push to the master branch of this code repository.
   #
-  push: 
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
 
   #
   # Allows deployment to be invoked manually through the GitHub Actions user interface.
   #
-  workflow_dispatch: 
-  
+  workflow_dispatch:
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "hello-world"
